--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
   <title>Hari Bol</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="login2.css">
+  <link rel="stylesheet" href="login.css">
 	</head>
 <body>
    <div class="wrapper">
